feat: add new apis
