# playbook-media-typescript-sdk/src/typescript-fetch/models/GetTeamResponse.ts
@@ -1,0 +1,65 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Service
+ * Solomon AI Social Service
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: yoanyomba@solomon-ai.co
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface GetTeamResponse
+ */
+export interface GetTeamResponse {
+    /**
+     * 
+     * @type {string}
+     * @memberof GetTeamResponse
+     */
+    teamName?: string;
+}
+
+/**
+ * Check if a given object implements the GetTeamResponse interface.
+ */
+export function instanceOfGetTeamResponse(value: object): boolean {
+    let isInstance = true;
+
+    return isInstance;
+}
+
+export function GetTeamResponseFromJSON(json: any): GetTeamResponse {
+    return GetTeamResponseFromJSONTyped(json, false);
+}
+
+export function GetTeamResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetTeamResponse {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'teamName': !exists(json, 'teamName') ? undefined : json['teamName'],
+    };
+}
+
+export function GetTeamResponseToJSON(value?: GetTeamResponse | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'teamName': value.teamName,
+    };
+}
+
