# playbook-media-typescript-sdk/src/typescript-fetch/models/PermissionType.ts
@@ -1,0 +1,44 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Social Service
+ * Solomon AI Social Service
+ *
+ * The version of the OpenAPI document: 0.1
+ * Contact: yoanyomba@solomon-ai.co
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+/**
+ * 
+ * @export
+ */
+export const PermissionType = {
+    Unspecified: 'PERMISSION_TYPE_UNSPECIFIED',
+    Read: 'PERMISSION_TYPE_READ',
+    Write: 'PERMISSION_TYPE_WRITE',
+    Edit: 'PERMISSION_TYPE_EDIT',
+    Delete: 'PERMISSION_TYPE_DELETE',
+    Publish: 'PERMISSION_TYPE_PUBLISH',
+    Moderate: 'PERMISSION_TYPE_MODERATE',
+    Admin: 'PERMISSION_TYPE_ADMIN'
+} as const;
+export type PermissionType = typeof PermissionType[keyof typeof PermissionType];
+
+
+export function PermissionTypeFromJSON(json: any): PermissionType {
+    return PermissionTypeFromJSONTyped(json, false);
+}
+
+export function PermissionTypeFromJSONTyped(json: any, ignoreDiscriminator: boolean): PermissionType {
+    return json as PermissionType;
+}
+
+export function PermissionTypeToJSON(value?: PermissionType | null): any {
+    return value as any;
+}
+
