# playbook-media-typescript-sdk/src/typescript-fetch/models/index.ts
@@ -29,6 +29,8 @@ export * from './CreateNoteResponse';
 export * from './CreatePollResponse';
 export * from './CreatePostResponse';
 export * from './CreatePublicationResponse';
+export * from './CreateTeamBody';
+export * from './CreateTeamResponse';
 export * from './CreateTopicResponse';
 export * from './CreateUserProfileRequest';
 export * from './CreateUserProfileResponse';
@@ -41,6 +43,7 @@ export * from './DeletePostFromPublicationResponse';
 export * from './DeletePostResponse';
 export * from './DeletePublicationEditorResponse';
 export * from './DeletePublicationResponse';
+export * from './DeleteTeamResponse';
 export * from './DeleteUserProfileResponse';
 export * from './DiscoverProfilesResponse';
 export * from './EditCommentReplyBody';
@@ -95,6 +98,7 @@ export * from './NotificationFeedGroup';
 export * from './NotificationTimeline';
 export * from './PathUnknownErrorMessageResponse';
 export * from './PendingFollowRequest';
+export * from './PermissionType';
 export * from './PollPost';
 export * from './PollResponse';
 export * from './Post';
